# QCM

./: Cargo.toml  QCM _ Algorithmique et Programmation en Python.docx  build.rs  extract.py  output.txt  scaffold.py
.github/workflows/: build.yml
QcmApp/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  QcmApp.csproj
qcm-app/.github/workflows/: build.yml
qcm-app/src/: index.html  main.js  styles.css
qcm-app/src-tauri/: Cargo.toml  tauri.conf.json
qcm_app/: Cargo.toml
qcm_app/src/: main.rs
src/: main.rs
