[package]
name = "qcm-app"
version = "0.1.0"
edition = "2021"
description = "QCM App"

[build-dependencies]
tauri-build = { version = "1" }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
